# matrixtools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: matrixtools.hpp
src/: main.cpp  matrixtools.cpp
